# SPDX-FileCopyrightText: 2023 Andrew Pantuso <ajpantuso@gmail.com>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "echor"
author = "bongus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive", "cargo"] }

[dev-dependencies]
anyhow = "1.0.68"
assert_cmd = "2.0.8"
predicates = "2.1.5"
test-case = "2.2.2"
